--- a/src/components/note/note.module.css
+++ b/src/components/note/note.module.css
@@ -1,7 +1,7 @@
 @value mainColor, mainDarkColor, whiteColor, greyColor, blackColor, buttonColor, buttonBackgroundColor from '../../common/colors.css';
+@value mediaQuery from '../../common/size.css';
 
 .note {
-    position: relative;
     width: 45em;
     height: 20em;
     margin: 1em;
@@ -21,7 +21,7 @@
     flex: 1;
     padding: 0.5em;
     font-weight: bold;
-    font-size: 1.1em;
+    font-size: 1.2rem;
     text-align: center;
     color: whiteColor;
     background: none;
@@ -31,13 +31,13 @@
 
 .buttonGroup {
     display: flex;
-    margin-right: 0.25em;
 }
 .button {
     color: whiteColor;
     background: none;
     border: 0;
-    margin-left: 0.25em;
+    margin-right: 0.25em;
+    font-size: 1rem;
     cursor: pointer;
     transition: 0.5s;
     opacity: 0;
@@ -53,9 +53,21 @@
     width: 100%;
     height: 100%;
     padding: 0.5em;
+    font-size: 0.8rem;
     overflow-y: auto;
     outline: 0;
     resize: none;
     background: none;
     color: blackColor;
+}
+
+@media screen and (max-width: mediaQuery) {
+    .note {
+        width: 100%;
+        height: 10em;
+        margin: 0.2em 0;
+    }
+    .button {
+        opacity: 1;
+    }
 }
